Fixed spacing between hero and projects

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 
 /* Main page wrapper */
 .page {
-  padding: 100px 10px;
+  padding: 10px 10px;
 }
 
 /* Content width */
@@ -34,6 +34,8 @@ body {
   max-width: 1040px;
   margin: 0 auto;
 }
+
+
 
 /* =========================================
    HERO SECTION (NAME + INTRO + LINKS + PHOTO)
@@ -43,9 +45,9 @@ body {
   display: grid;
   grid-template-columns: 1.4fr 0.6fr;
   align-items: center;
-  gap: 68px;
+  gap: 300px;
   padding-top: 24px;
-  max-width: 1010px;
+  max-width: 1410px;
   /* Make the hero take up the viewport (accounting for page padding) */
   min-height: calc(100vh - 180px);
 }
@@ -155,7 +157,9 @@ body {
   transform: translateX(60px);
 }
 
-
+.section{
+  margin-top: 140px;
+}
 
 
 
@@ -277,7 +281,7 @@ body {
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-  gap: 24px;
+  gap: 64px;
   
 }
 
@@ -304,7 +308,9 @@ body {
 }
 
 /* Project title */
+
 .projectCard__title {
+  font-family: var(--font-main);
   margin: 0;
   font-size: 18px;
   font-weight: 600;
@@ -356,6 +362,7 @@ body {
   width: 95%;
   height: 30%;
   overflow: hidden;
+
 }
 
 .projectCard__image {
